Update SatCatalog.java